--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "eslint": "^3.4.0",
     "express": "^4.14.0",
     "nunjucks": "^2.4.2"
   },
   "devDependencies": {
-    "eslint": "^3.4.0"
+    "eslint": "^3.4.0",
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2"
   }
 }
