--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node visual.js",
     "test": "./node_modules/mocha/bin/mocha test",
-    "lint": "./node_modules/.bin/eslint *.js"
+    "lint": "./node_modules/.bin/eslint server/ visual.js"
   },
   "author": "Etskh",
   "license": "MIT",
@@ -14,7 +14,8 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "nunjucks": "^2.4.2"
+    "nunjucks": "^2.4.2",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
