--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "nunjucks": "^2.4.2",
     "winston": "^2.2.0"
   },
