--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node visual.js",
     "test": "./node_modules/mocha/bin/mocha test",
+    "test-win": "mocha --recursive",
     "lint": "./node_modules/.bin/eslint server/ visual.js"
   },
   "author": "Etskh",
