--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node visual.js",
     "test": "./node_modules/mocha/bin/mocha --recursive",
+    "coverage": "./node_modules/.bin/istanbul cover _mocha -- --recursive",
     "test-win": "mocha --recursive",
     "lint": "./node_modules/.bin/eslint server/ visual.js"
   },
@@ -22,6 +23,7 @@
   "devDependencies": {
     "eslint": "^3.4.0",
     "expect": "^1.20.2",
+    "istanbul": "^0.4.5",
     "mocha": "^3.0.2"
   },
   "engines": {
