--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node visual.js",
     "test": "./node_modules/mocha/bin/mocha --recursive",
-    "coverage": "./node_modules/.bin/istanbul cover _mocha -- --recursive",
+    "coverage": "./node_modules/.bin/istanbul cover --print both _mocha -- --recursive",
     "test-win": "mocha --recursive",
     "lint": "./node_modules/.bin/eslint server/ visual.js"
   },
