--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "csv-parse": "^1.1.7",
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "nunjucks": "^2.4.2",
+    "request": "^2.75.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
