--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "lodash": "^4.15.0",
     "nunjucks": "^2.4.2",
     "request": "^2.75.0",
+    "url": "^0.11.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
     "expect": "^1.20.2",
     "istanbul": "^0.4.5",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "nock": "^8.0.0"
   },
   "engines": {
     "node": "6.x"
