--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.15.0",
     "nunjucks": "^2.4.2",
     "request": "^2.75.0",
+    "uglify": "^0.1.5",
     "url": "^0.11.0",
     "winston": "^2.2.0"
   },
