Moved javascript to assets, and added gulp builder

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "visual.js",
   "scripts": {
     "postinstall": "npm run less",
+    "prestart": "npm run ./node_modules/gulp/bin/gulp scripts",
     "start": "node visual.js",
     "test": "./node_modules/mocha/bin/mocha --recursive",
     "coverage": "./node_modules/.bin/istanbul cover --print both _mocha -- --recursive",
     "lint": "./node_modules/.bin/eslint server/ visual.js",
     "less": "./node_modules/less/bin/lessc assets/style/visual.less public/style.css",
-    "test-win": "mocha --recursive",
-    "less-win": "lessc assets/style/visual.less public/style.css"
+    "test-win": "mocha --recursive"
   },
   "author": "Etskh",
   "license": "MIT",
@@ -20,11 +20,14 @@
     "cookie-parser": "^1.4.3",
     "csv-parse": "^1.1.7",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
     "less": "^2.7.1",
     "lodash": "^4.15.0",
     "nunjucks": "^2.4.2",
     "request": "^2.75.0",
-    "uglify": "^0.1.5",
     "url": "^0.11.0",
     "winston": "^2.2.0"
   },
