--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "It's a great thing!",
   "main": "visual.js",
   "scripts": {
-    "postinstall": "npm run ./node_modules/gulp/bin/gulp.js",
+    "postinstall": "node ./node_modules/gulp/bin/gulp.js",
     "start": "node visual.js",
     "test": "./node_modules/mocha/bin/mocha --recursive",
     "coverage": "./node_modules/.bin/istanbul cover --print both _mocha -- --recursive",
@@ -24,7 +24,6 @@
     "gulp-less": "^3.1.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
-    "less": "^2.7.1",
     "lodash": "^4.15.0",
     "nunjucks": "^2.4.2",
     "request": "^2.75.0",
