--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "expect": "^1.20.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
-    "nock": "^8.0.0"
+    "nock": "^8.0.0",
+    "sinon": "^1.17.6"
   },
   "engines": {
     "node": "6.x"
