--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Etskh",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "csv-parse": "^1.1.7",
