--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,7 @@
             "modules": false
         }],
         "stage-1",
-        "react",
-        "es2015"
+        "react"
     ],
     "env": {
         "test": {
