--- a/package.json
+++ b/package.json
@@ -47,10 +47,8 @@
     "eslint-plugin-react": "^7.5.1",
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
-    "nock": "^8.0.0",
     "nodemon": "^1.12.5",
-    "nyc": "^11.4.1",
-    "sinon": "^1.17.6"
+    "nyc": "^11.4.1"
   },
   "nyc": {
     "sourceMap": false,
