--- a/package.json
+++ b/package.json
@@ -45,13 +45,17 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "expect": "^1.20.2",
-    "mocha": "^3.0.2",
+    "expect": "^22.0.3",
+    "mocha": "^4.0.1",
     "nodemon": "^1.12.5",
     "nyc": "^11.4.1"
   },
   "nyc": {
     "sourceMap": false,
-    "instrument": false
+    "instrument": false,
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ]
   }
 }
