--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "expect": "1.20.2",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.5",
-    "nyc": "^11.4.1"
+    "nyc": "^11.4.1",
+    "sinon": "^4.1.4"
   },
   "nyc": {
     "sourceMap": false,
