--- a/appspec.yml
+++ b/appspec.yml
@@ -11,23 +11,15 @@ permissions:
       - directory
       - file
 hooks:
-  BeforeInstall:
-    - location: scripts/install.sh
-      timeout: 300
-      runas: root
   AfterInstall:
-    - location: scripts/post_install.sh
+    - location: scripts/install.sh
       timeout: 600
       runas: ec2-user
   ApplicationStart:
-    - location: scripts/run.sh
+    - location: scripts/start.sh
       timeout: 120
       runas: ec2-user
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 120
-      runas: ec2-user
-  ValidateService:
-    - location: scripts/validate.sh
-      timeout: 60
       runas: ec2-user
