--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ after_script:
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 deploy:
-  provider: heroku
-  api_key:
-    secure: $HEROKU_API
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_ID
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: "visual-character-bucket"
+    key: latest/app.zip
+    application: "visual-character"
+    deployment_group: "visual-character_deployment-group"
