--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_script:
 
 deploy:
   - provider: codedeploy
-    access_key_id: $AWS_ACCESS_ID
+    access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: "visual-character-bucket"
     key: latest/app.zip
