--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: "visual-character-bucket"
+    region: us-west-2
     key: latest/app.zip
     application: "visual-character"
     deployment_group: "visual-character_deployment-group"
