--- a/.travis.yml
+++ b/.travis.yml
@@ -10,20 +10,20 @@ after_script:
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 before_deploy:
-  - npm run clean
-  - tar -zcf latest-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tgz ./*
+  - zip -r master-${TRAVIS_BUILD_NUMBER}.zip ./*
 
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: "visual-character-bucket"
-    file: latest-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tgz
+    zip_file: master-${TRAVIS_BUILD_NUMBER}.zip
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: "visual-character-bucket"
     region: us-west-2
+    s3_key: master-${TRAVIS_BUILD_NUMBER}.zip
     # key: ${TRAVIS_BUILD_DIR}${REPO}-${BUILD_ENV}-${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.tgz
     application: "visual-character_code-deploy"
     deployment_group: "visual-character"
